# globalsend

./: .gitignore  ARCHITECTURE.md  Cargo.toml
crates/globalsend-crypto/: Cargo.toml
crates/globalsend-crypto/src/: lib.rs
