[package]
name = "globalsend-crypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "globalsend_crypto"
path = "src/lib.rs"

[dependencies]
rand_core = "0.6"
zeroize = "1.5"
chacha20poly1305 = { version = "0.10", features = ["xchacha20"] }
x25519-dalek = "2.0"
hkdf = "0.12"
ed25519-dalek = { version = "1.0", features = ["std"] }
base64 = "0.21"

[dev-dependencies]
hex = "0.4"
